# topnmusic

./: .gitignore  README.md  problem_audio.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-cd.yml  python-ci.yml
data/processed/: labeled_tracks.csv
data/raw/fma_medium/: checksums  labeled_tracks.csv
data/samples/samples_audio_fma_medium_params_fmax_all_music/: labels.csv
hpc_scripts/: box.bash  submit.sh
models/: config.json  rng_state.pth  scheduler.pt  test_set_accuracy.json  trainer_state.json  val_set_initial_accuracy.json
src/: balance_and_sample.py  config.py  feature_extraction.py  features.py  mfcc_params.json  preprocess_params.json
src/NNModel/: NeuralNetwork.py  NewSongClassification.py  feature_extraction.py
src/topnmusic/: ast_finetuned_audioset_finetunded_gtzan.py  ast_finetuned_audioset_finetuned_gtzan.py  features.py  initial_val_set_accuracy.py  label_tracks.py  test_set_accuracy.py
tests/: test_features.py  test_model.py
