[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "topnmusic"
version = "0.1"
description='A music genre classifier'
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    'accelerate',
    'datasets',
    'evaluate',
    'gradio',
    'librosa',
    'matplotlib',
    'numpy',
    'pandas',
    'torch',
    'torchvision',
    'torchaudio',
    'transformers'
]
